Update clean code